decreasing scale of social icons on hover in #drop2 and #drop4 zones. This seems to solve the glitch of a vertical scrollbar appearing when one of those icons are hovered while the navbar is being displayed in one of those drop zones

--- a/src/scss/components/navigation/desktop/_desktopNav.scss
+++ b/src/scss/components/navigation/desktop/_desktopNav.scss
@@ -176,6 +176,10 @@
  position: absolute;
  top:0;
 
+ .navbar__icon--social:hover {
+   transform: scale(1.25);;
+ }
+
  @include bp("tab-md--ar3/1") {
   .navbar__container--socialMedia {
     justify-content: space-evenly;
